--- a/src/pages/Login/login.css
+++ b/src/pages/Login/login.css
@@ -1,5 +1,5 @@
 .loginBase{
-	background: url('../../assets/JPGs/background_letter.jpg');
+	background: url('https://alacritas.cis.utas.edu.au/~mingked/kit301/JPGs/background_letter.jpg');
 	background-size: cover;
 	height: 100%;
 	padding-top: 35px;
