--- a/src/layout/homes/Navbar.css
+++ b/src/layout/homes/Navbar.css
@@ -1,13 +1,15 @@
 .navbar {
+    width: 100%;
     background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
     height: 80px;
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 1.2rem;
-    position: sticky;
+    position: fixed;
     top: 0;
     z-index: 999;
+ 
 }
 
 .navbar-container {
@@ -39,14 +41,11 @@
 }
 
 .nav-menu {
-    display: grid;
-    grid-template-columns: repeat(4, auto);
-    grid-gap: 10px;
-    list-style: none;
-    text-align: center;
-    width: 60vw;
+    
+    display: flex;
+    width: 80vw;
     justify-content: end;
-    margin-right: 2rem;
+    
 }
 
 .nav-item {
@@ -69,10 +68,6 @@
 
 .fa-bars {
     color: #fff;
-}
-
-.nav-links-mobile {
-    display: none;
 }
 
 .menu-icon {
