--- a/src/pages/Result/Result.css
+++ b/src/pages/Result/Result.css
@@ -22,7 +22,7 @@
     margin-top: 10px;
 }
 
-input{
+.formSearch input{
     margin-top: 10px;
     height:55px;
     width: 560px;
@@ -39,7 +39,60 @@ input{
     background-repeat: no-repeat;
     background-size: 85%;
     margin: 5px 30px;
+    cursor: pointer;
 }
-.filter .selection {
-    justify-content: center;
+.result .filter{
+    background-color: #ffffff40;  
+    
+}
+.filter .selection{
+    width:80%;
+    margin-left: 18%;
+    display: flex;
+    height: 95px;
+}
+.selection .left{
+    display: flex;
+    width: 20%;
+    padding: 25px;
+    font-size: large;
+}
+.selection .all{
+    margin-left: 25px;
+    padding-left: 5px;
+    padding-right: 5px;
+    background-color:darkseagreen;
+    border-radius: 10px;
+    height: 25px;
+    color: aliceblue;
+    width: 70px;
+}
+.filter .selection .right{
+    width: 80%;
+    font-size: large;
+    padding-top: 20px;   
+}
+
+.filter .selection ul{
+    list-style-type: none;
+    display:inline-block;
+    display: flex; margin-left: 20px;
+    flex-wrap: wrap;
+    width: 70%
+}
+.filter .selection li{
+    padding-left: 5px;
+    border-radius: 10px;
+    margin-left: 25px;
+    margin-top: 5px;
+    cursor: pointer;
+}
+.hrSearch{
+    width: 920px;
+    margin-left: 305px;
+    margin-top: 5px;
+    opacity: 40%;
+    border:none;
+    border-top:4px dashed #9C528B;
+    
 }
