--- a/src/pages/Register/register.css
+++ b/src/pages/Register/register.css
@@ -1,10 +1,10 @@
 .regiBase{
-	background: url('https://alacritas.cis.utas.edu.au/~mingked/kit301/JPGs/back-register.png');
+	background-image: url('https://alacritas.cis.utas.edu.au/~mingked/kit301/JPGs/back-register.png');
 	background-size: cover;
-	height:100%;
-	padding-top: 15px;
-	padding-bottom: 25px;
+	height: 825px;
+	padding-top: 45px;
 	background-repeat: no-repeat;
+	
 }
 #regiBox{
 	display: flex;
@@ -19,8 +19,12 @@
 	border-radius: 1pc;
 	width: 35%;
 	height: 600px;
-	background: url('https://alacritas.cis.utas.edu.au/~mingked/kit301/JPGs/front-register.png');
+	background-image: url('https://alacritas.cis.utas.edu.au/~mingked/kit301/JPGs/front-register.png');
 	background-size: cover;
+	
+	border-top-right-radius: 2pc;
+	border-bottom-right-radius: 2pc;
+	
 }
 
 #right{
@@ -72,3 +76,16 @@
 	margin-left: 10px;
 }
 
+.dotSet{
+	display: flex;
+	margin-left: 85px;
+	margin-top: 570px;
+}
+.dotSet .pageDot{
+	width: 15px;
+	height: 15px;
+	background-color: #E7C7AD;
+	border-radius: 50%;
+	margin-left: 30px;
+	cursor: pointer;
+}
