--- a/src/layout/homes/Button.css
+++ b/src/layout/homes/Button.css
@@ -33,6 +33,9 @@
 .btn--large {
     padding: 12px 26px;
     font-size: 20px;
+    width: 300px;
+    height: 125px;
+    border: 5px solid white;
 }
 
 .btn--medium:hover,
