--- a/src/layout/homes/HeroSection.css
+++ b/src/layout/homes/HeroSection.css
@@ -1,14 +1,6 @@
-video {
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    z-index: -1;
-}
-
 .hero-container {
     /* background: url('images/img-home.jpg') center center/cover no-repeat; */
-    height: 100%;
+    height: 810px;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -16,41 +8,50 @@ video {
     align-items: center;
     box-shadow: inset 0 0 0 1000px rgba(0,0,0,0.2);
     object-fit: contain;
+    
 }
 
-.hero-container > h1 {
+.hero-container video {
+    object-fit: cover;
+    width: 100%;
+    height: inherit;
+    position: fixed;
+    z-index: -1;
+    margin-top: 110px;
+}
+
+.hero-container  h1 {
     color: white;
     font-size: 100px;
-    margin-top: 100px;
+    margin-top: -70px;
 }
 
-.hero-container > p {
-    margin-top: 8px;
+.hero-container  p {
+    margin-top: -35px;
     color: white;
     font-size: 32px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
-.eventType, 
-.checkin, 
-.guest {
+.requires{
     text-align: center;
-    background-color: white;
-    border: 1px solid rgb(54, 122, 26);
+    background-color:#ffffff00 ;
+    border: 5px solid white;
     border-radius: 5px;
-    color: black;
-    font-size: 20px;
+    color: white;
+    font-size: 30px;
+    font-style: italic;
     padding: 5px 10px;
     display: inline-block;
-    margin: 15% 2px;
-    width: 25%;
-    height: 50px;
+    margin-top: 170px;
+    margin-left: 15px;
+    width: 300px;
+    height: 135px;
+    
+}
+.eventType option{
+    background-color:#6495ed60;
 }
 
-
-.btn {
-    margin: 6px;
-
-}
 
 .fa-play-circle {
     margin-left: 4px;
@@ -77,6 +78,20 @@ video {
     }
     .btn {
         width: 100%;
-
     }
+}
+
+.search{
+    display: flex;
+    padding: 15px;
+    margin-top: -120px;
+}
+.btn{
+    margin-top: 30px;
+    border-radius: 5px;
+    font-size: 50px;
+}
+
+.hero-container a{
+    margin-top: 15px;
 }
