--- a/src/layout/homes/Cards.css
+++ b/src/layout/homes/Cards.css
@@ -1,6 +1,7 @@
 .cards {
-    padding: 4rem;
+    padding: 40px;
     background: #fff;
+    justify-content: center;
 }
 
 .cards h1 {
@@ -11,28 +12,35 @@
     display: flex;
     flex-flow: column;
     align-items: center;
-    max-width: 1120px;
-    width: 90%;
+    
+    width: 1650px;
     margin-top: 10px;
     margin-left: -70px;
 }
 
 .cards__wrapper {
     position: relative;
-    margin: 50px 0 45px;
+    margin-top: 30px;
+    
 }
 
 .cards__items {
-    margin-bottom: 24px;
+    margin-bottom: 44px;
+    display: flex;
+    margin-left: 100px;
+    width: 1400px;
 }
 
 .cards__item {
     display: flex;
-    flex: 1;
-    margin: 0 1rem;
+    
     border-radius: 10px;
 }
-
+.cards__items .desc{
+    
+    width:760px;
+    margin-left: 30px;
+}
 .cards__item__link {
     display: flex;
     flex-flow: column;
