--- a/src/layout/homes/Button.css
+++ b/src/layout/homes/Button.css
@@ -6,8 +6,12 @@
     padding: 8px 20px;
     border-radius: 2px;
     outline: none;
-    border: none;
+    border: 5px solid white;
+    font-size: 40px;
     cursor: pointer;
+    width:270px;
+    position: relative;
+    top:-120px
 }
 
 .btn--primary {
@@ -32,23 +36,24 @@
 
 .btn--large {
     padding: 12px 26px;
-    font-size: 20px;
-    width: 300px;
-    height: 125px;
+    font-size: 40px;
+    width: 280px;
+    height: 110px;
     border: 5px solid white;
 }
 
 .btn--medium:hover,
 .btn--large:hover {
-    background: #fff;
-    color: #242424;
+    background:#6495ed60;
+    color: #fff;
     transition: all 0.3s ease-out;
 }
 
 .decorate{
     background-color: #ffffff00;
-    width: 280px;
-    height: 100px;
-    margin-top: -112px;
+    width: 310px;
+    height: 130px;
     border: #fff solid 5px;
+    border-radius: 5px;
+    
 }
