--- a/src/layout/homes/HeroSection.css
+++ b/src/layout/homes/HeroSection.css
@@ -7,7 +7,7 @@
     justify-content: center;
     align-items: center;
     box-shadow: inset 0 0 0 1000px rgba(0,0,0,0.2);
-    object-fit: contain;
+    
     
 }
 
@@ -23,7 +23,7 @@
 .hero-container  h1 {
     color: white;
     font-size: 100px;
-    margin-top: -30px;
+    margin-top: 60px;
 }
 
 .hero-container  p {
@@ -86,12 +86,12 @@
     padding: 15px;
     margin-top: -120px;
 }
-.btn{
-    margin-top: 30px;
-    border-radius: 5px;
-    font-size: 50px;
+.btnHero{
+    font-size: 30px;
+    font-style: italic;
 }
 
 .hero-container a{
-    margin-top: 15px;
+   position: relative;
+   bottom:95px
 }
