--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -1,9 +1,16 @@
-* {
+ .home{
+    display: flex;
+ }
+ 
+ 
+ 
+ 
+ /* * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
     font-family: 'PT Sans', sans-serif;
-}
+} 
 
 .home,
 .services,
@@ -42,4 +49,4 @@
     background-repeat: no-repeat;
     color: #fff;
     font-size: 100px;
-}
+} */
