--- a/src/pages/Home/homes/Button.css
+++ b/src/pages/Home/homes/Button.css
@@ -1,7 +1,9 @@
 :root {
     --primary: white
 }
-
+.BTN{
+    display: flex;
+}
 .btn {
     padding: 8px 20px;
     border-radius: 2px;
@@ -10,8 +12,7 @@
     font-size: 40px;
     cursor: pointer;
     width:270px;
-    position: relative;
-    top:-120px
+    
 }
 
 .btn--primary {
