--- a/src/pages/Home/homes/Navbar.css
+++ b/src/pages/Home/homes/Navbar.css
@@ -1,15 +1,13 @@
 .navbar {
-    width: 100%;
+    width: 100vw;
     background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
-    height: 80px;
+    height: 10vh;
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 1.2rem;
-    position: fixed;
+    position: sticky;
     top: 0;
-    z-index: 999;
- 
 }
 
 .navbar-container {
@@ -21,18 +19,13 @@
 }
 
 .navbar-logo {
-    color: #fff;
     justify-self: start;
     cursor: pointer;
-    text-decoration: none;
-    font-size: 2rem;
-    display: flex;
-    align-items: center;
+
+    
 }
 .navbar-logo > img {
-    height: 80px;
-    margin-top: 0%;
-    /* color: white; */
+    height: 10vh;
 }
 
 .fa-typo3 {
@@ -57,7 +50,7 @@
     display: flex;
     align-items: center;
     text-decoration: none;
-    padding: 0.5rem 1rem;
+    padding: 0.5rem 1.85rem;
     height: 100%;
 }
 
@@ -116,7 +109,6 @@
         position: absolute;
         top: 0;
         left: 0;
-        transform: translate(25%, 50%);
     }
 
     .menu-icon {
@@ -154,4 +146,4 @@
         color: #242424;
         transition: 250ms;
     }
-}
+}  
