--- a/src/pages/Home/homes/HeroSection.css
+++ b/src/pages/Home/homes/HeroSection.css
@@ -11,14 +11,14 @@
 .hero-container  h1 {
     color: white;
     font-size: 100px;
-    margin-left: 32vw;
+    margin-left: 34vw;
     
 }
 .hero-container  p {
-    margin-top: -11vh;
+    margin-top: -5vh;
     color: white;
     font-size: 32px;
-    margin-left: 37vw;
+    margin-left: 40vw;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 .search{
@@ -26,6 +26,17 @@
     flex-wrap: wrap;
     padding-left: 9vw;
     /* margin-top: -22vh;  */
+}
+.twoSearch .btn{
+    margin-left: 38.5vw;
+    margin-top: 3vh;
+    margin-bottom: 1vh;
+}
+.twoSearch a{
+   color:#7691C6;
+   font-size: 20px;
+   margin-left: 40vw;
+   
 }
 .requires{
     text-align: center;
@@ -52,20 +63,7 @@
     margin-left: 4px;
 }
 
-.btnHero{
-    font-size: 1rem;
-    font-style: italic;
-    
-}
-
-.hero-container a{
-   position: relative;
-   bottom:10vh; 
-   color:#7691C6;
-   font-size: 20px;
-} 
-
-/* @media screen and (max-width: 960px) {
+@media screen and (max-width: 960px) {
     .hero-container > h1 {
         font-size: 70px;
         
@@ -73,6 +71,26 @@
     .hero-container > p {
         margin-top: -6vh;
         font-size: 1.5rem;
+    }
+    .requires{
+        flex: 24%;
+        
+    }
+    .search{
+        margin-left:-7vw ;
+        margin: 0vw 1vw;
+    }
+    .hero-container{
+        height: 100%;
+    }
+    .twoSearch .btn{
+        margin-left: 28.5vw;
+        margin-top: 1vh;
+        margin-bottom: 1vh;
+        width: 45vw;
+    }
+    .twoSearch a{
+        margin-left: 35vw;
     }
 }
 
@@ -87,17 +105,21 @@
         display: block;
         text-decoration: none;
     }
-    .btn {
-        width: 100%;
+    .hero-container{
+        height: 100%;
+    }
+    .twoSearch .btn{
+        margin-left: 28.5vw;
+        margin-top: 3vh;
+        margin-bottom: 1vh;
+        width: 45vw;
     }
     .requires{
-        flex: 49%;
+        flex: 24%;
         
     }
-    .search{
-        margin-left:-7vw ;
-        margin: 1vw 1vw;
+    .twoSearch a{
+        margin-left: 22vw;
     }
-   
 }
- */
+
