--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -3,17 +3,7 @@
     flex-direction: column;
  }
  
- 
- 
- 
- /* * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    font-family: 'PT Sans', sans-serif;
-} 
-
-.home,
+ /* .home,
 .services,
 .products,
 .sign-up {
@@ -23,6 +13,16 @@
     justify-content: center;
     font-size: 3rem;
 }
+  */
+ 
+ /* * {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: 'PT Sans', sans-serif;
+} 
+
+
 
 .services {
     background-image: url('https://alacritas.cis.utas.edu.au/~mingked/kit301/JPGs/img-2.jpg');
