--- a/src/pages/Home/homes/Navbar.css
+++ b/src/pages/Home/homes/Navbar.css
@@ -46,6 +46,13 @@
     height: 80px;
 }
 
+.nav-item .register{
+    color: #fff;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    
+}
 .nav-links {
     color: #fff;
     display: flex;
