--- a/src/pages/Home/homes/Navbar.css
+++ b/src/pages/Home/homes/Navbar.css
@@ -51,7 +51,7 @@
     cursor: pointer;
     display: flex;
     flex-direction: column;
-    
+    margin-top: 3vh;
 }
 .nav-links {
     color: #fff;
