--- a/src/pages/Profile/profile.css
+++ b/src/pages/Profile/profile.css
@@ -1,99 +1,105 @@
 .profile{
-    height: 100%;
+    height: 100vh;
+    background-color:#fff;
 }
 .profile .upper{
-    width: 100%;
-    height: 45%;
+    width: 100vw;
+    height: 45vh;
     display: flex;
 }
 .upper .avatar{
-    width: 30%;
+    width: 30vw;
     height: 100%;
     justify-content: center;
     justify-items: center;
-    padding-left: 135px;
-    padding-top: 45px;
+    padding-left: 10%;
+    padding-top: 2%;
 }
 .avatar .ava-pic{
-    width: 275px;
-    height: 275px;
+    width: 17vw;
+    height: 32vh;
     background-image: url("https://alacritas.cis.utas.edu.au/~mingked/kit301/JPGs/avartar%201.jpg");
     background-size: cover;
     border-radius: 15px;
 }
 .avatar button{
-    width: 275px;
-    height: 45px;
+    width: 17vw;
+    height: 5vh;
     margin-top: 5px;
     font-size: medium;
     font-style: italic;
 }
-.desc {
-    padding-left: 45px;
-    padding-top: 45px;
+.profile .desc {
+    padding-left: 7vw;
+    padding-top: 7vh;
+    
 }
 .desc h2{
-    max-width: 800px;
+    max-width: 45vw;
     font-family: 'Times New Roman', Times, serif;
+    
+}
+.desc h1{
+    border-bottom: 0.5vh solid #cb867d;
 }
 .navies{
     width: 90%;
-    height: 7%;
+    height: 7vh;
     display: flex;
     flex-direction: row;
-    padding: 20px;
+    
     padding-bottom: 0;
     border-bottom: 3px solid rgb(172, 167, 173);
-    margin-left: 5%;
+    margin-left: 5.5vw;
+    margin-top: 1vh;
 }
 .navies .nav-sub{
-    margin-left: 120px;
-    width: 170px;
+    margin-left: 2vw;
+    width: 15vw;
     cursor: pointer;
-    padding-bottom: 30px;
-    /*
-    border-bottom: 3px solid rgb(161, 72, 181);
-    */
+    
     font-size: medium;
     font-weight: 400;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family:'Times New Roman', Times, serif;
 }
 
 .BookList{
-    margin-left: 80px;
+    margin-left: 5.5vw;
     width: 90%;
-    height: 35%;
-    background-color: blanchedalmond;
-    padding: 5px;
+    height: 35vh;
+    background-color: #C4C9C3;
+    padding: 1vh;
    
 }
 
 .booking .book-link  {
     width: 100%;
     height: 23%;
-    background-color: #ffffff70;
+    background-color: #cb867d;
     border-bottom: 3px solid rgb(161, 72, 181,0.6);
-    margin-top: 5px;
+    margin-top: 1vh;
     display: flex;
     
-    padding-top: 15px;
-    padding-left:35px ;
+    padding-top: 1vh;
+    padding-left:3vw ;
 }
 .booking .book-link h3{
-    margin-top: -5px;
-    margin-left: 175px;
+    margin-top: -0.5vh;
+    margin-left: 12vw;
+   
 }
 .booking .book-link h4{
-    margin-left: 175px;
+    margin-left: 12vw;
 }
 .booking .book-link h2{
-    margin-top: -5px;
+    margin-top: -0.5vh;
+    color: #ffffff;
 }
 .bookBTN{
     margin-top: 1%;
     width: 70%;
     height: 13%;
     margin-left: 15%;
-    background-color:cornflowerblue;
+    background-color:#BA4220;
     color: aliceblue;
 }
