--- a/src/layout/Header/style/index.css
+++ b/src/layout/Header/style/index.css
@@ -3,10 +3,10 @@
     line-height: 7vh;
     padding-right: 7vw;
     display: flex;
-    background-color: #53835B;
+    background-color: #9fbfc380;
     font-size: 1rem;
-    color: #A9DDD6;
-    box-shadow: 0px 5px #B63E1C80;
+    color: #ffffff;
+    box-shadow: 0px 5px #9bbac7;
 }
 .m-header .location{
     text-align: left;
@@ -24,8 +24,11 @@
     margin-left: 5vw;
 }
 .item .selec{
-    color: #A9DDD6;
+    color: #ffffff;
 }
 .m-header .location .item{
     margin-left: 5vw;
+}
+@media only screen and (max-width: 810px){
+    
 }
