--- a/src/pages/Profile/profile.css
+++ b/src/pages/Profile/profile.css
@@ -18,6 +18,7 @@
 .avatar .ava-pic{
     width: 17vw;
     height: 32vh;
+    max-height: 320px;
     background-image: url("https://alacritas.cis.utas.edu.au/~mingked/kit301/JPGs/avartar%201.jpg");
     background-size: cover;
     border-radius: 15px;
@@ -35,12 +36,12 @@
     
 }
 .desc h2{
-    max-width: 45vw;
+    width: 45vw;
     font-family: 'Times New Roman', Times, serif;
     
 }
 .desc h1{
-    border-bottom: 0.5vh solid #cb867d;
+    border-bottom: 0.5vh solid #919fcc;
 }
 .navies{
     width: 90%;
@@ -67,7 +68,7 @@
     margin-left: 5.5vw;
     width: 90%;
     height: 35vh;
-    background-color: #C4C9C3;
+    background-color: #908ea760;
     padding: 1vh;
    
 }
@@ -75,8 +76,8 @@
 .booking .book-link  {
     width: 100%;
     height: 23%;
-    background-color: #cb867d;
-    border-bottom: 3px solid rgb(161, 72, 181,0.6);
+    background-color: #B0E0E6;
+    border-bottom: 3px solid rgba(106, 133, 136, 0.6);
     margin-top: 1vh;
     display: flex;
     
@@ -93,13 +94,41 @@
 }
 .booking .book-link h2{
     margin-top: -0.5vh;
-    color: #ffffff;
+    color: #5169ad;
 }
 .bookBTN{
     margin-top: 1%;
     width: 70%;
     height: 13%;
     margin-left: 15%;
-    background-color:#BA4220;
+    background-color:#729eb2;
     color: aliceblue;
+}
+@media only screen and (max-width: 810px){
+    .profile .upper{
+        flex-direction: column;
+    }
+    .avatar .ava-pic{
+        width: 70vw;
+        
+        height: 55vh;
+    }
+    .avatar button{
+        width: 70vw;
+    }
+    .desc h2{
+        width: 70vw;
+        display: block;
+        max-height: 55vh;
+        padding-right: 1vw;
+        overflow: hidden;
+        line-height: 4vh;
+        text-overflow: ellipsis;  
+    }
+    .navies{
+        margin-top: 55vh;
+    }
+    .booking .book-link {
+        padding-right: 5vh;
+    }
 }
