--- a/src/layout/Header/style/index.css
+++ b/src/layout/Header/style/index.css
@@ -1,14 +1,21 @@
 :root{
     /* define variable at root in case of later using */
-    --background-color:black;
+    --background-color:rgba(107, 190, 203, 0.6);
 }
 .m-header{
     background-color: var(--background-color);
     text-align: center;
-    position: fixed;
+    position: sticky;
     width: 100%;
-    z-index: 999; /* very top layer */
-   
+}
+.location{
+    display: flex;
+    justify-content: center;
+}
+.location a{
+    margin-top: 15px;
+    margin-left: 15px;
+    color:bisque;
 }
 .trolley{
     position: absolute;
@@ -42,12 +49,12 @@
 }
 .trolley Link:hover{
     color:#000;
-}.nav-toggle:checked ~ nav{
+}.nav-toggle:checked ~ .trolley{
     /* ~ first sibling, doesn't have to be immediatelt after */
     display: block;
     transform: scale(1,1);  /*control lenght width */
 }
-.nav-toggle:checked ~ nav a{
+.nav-toggle:checked ~ .trolley Link{
     /* ~ first sibling, doesn't have to be immediatelt after */
    opacity: 1;
    transition: opacity 250ms ease-in-out 250ms; /*last one is animation delay*/
@@ -81,7 +88,7 @@
 .nav-toggle-label span::after{
     content: '';
     position: absolute;
-
+   
 }
 
 .nav-toggle-label span::before{
@@ -90,7 +97,7 @@
 .nav-toggle-label span::after{
     top:7px;
 }
-
+ 
 @media screen and (min-width:800px){
     .nav-toggle-label{
         display: none;
@@ -99,8 +106,8 @@
         display: grid;
         grid-template-columns: 1fr auto minmax(600px,1fr) 1fr; /*setting 4 columns*/
     }
-    .logo{
-        grid-column: 2 / 3;
+    .location{
+        grid-column: 1 / 3;
     }
     .trolley{
         grid-column: 3 / 4;
@@ -136,4 +143,4 @@
         margin-left: 3em;
         margin-bottom: 0;
     }
-}
+} 
