--- a/src/layout/Header/style/index.css
+++ b/src/layout/Header/style/index.css
@@ -31,8 +31,16 @@
 }
 .trolley ul{
     margin:0;
-    padding:0;
+    padding-top: 2vh;
     list-style: none;
+}
+.shop-list ul{
+    list-style: none;
+   
+}
+.shop-list li{
+    margin-bottom: 1rem;
+    background-color: rgb(135, 177, 169);
 }
 .trolley li{
     margin-bottom: 1em;
