--- a/src/layout/Header/style/index.css
+++ b/src/layout/Header/style/index.css
@@ -6,7 +6,7 @@
     background-color: var(--background-color);
     text-align: center;
     position: sticky;
-    width: 100%;
+    width: 100vw;
 }
 .location{
     display: flex;
