--- a/src/pages/CheckOut/checkout.css
+++ b/src/pages/CheckOut/checkout.css
@@ -5,7 +5,7 @@
     background-size: cover;
 }
 
-.left{
+.checkout .left{
     width: 55%;
     height: 95%;
     display: flex;
@@ -67,7 +67,7 @@
     margin-right: 3vw;
     margin-bottom: 2vh;
 }
-.right{
+.checkout .right{
     width: 45%;
     height: 100%;
     background-color:#83838310;
