--- a/src/pages/ItemIntro/Review.css
+++ b/src/pages/ItemIntro/Review.css
@@ -1,7 +1,6 @@
 .review{
     height: 85vh;
-    width: 100vw;
-    border: 1px solid black;
+    width: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -10,6 +9,30 @@
 .cate-review{
     height:20%;
     width: 90%;
+    display: flex;
+}
+.cate-review .total{
+    height: 100%;
+    width: 20%;
+    border: 1px solid orange;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.cate-review .marks{
+    padding:1rem;
+}
+.total h2{
+    font-size: 3rem;
+}
+.good .review-tag{
+    color:green;
+    margin-bottom: 1rem;
+    cursor: pointer;
+}
+.bad .review-tag{
+    color:red;
+    cursor: pointer;
 }
 .type-three{
     width: 90%;height:5.5%;
