--- a/src/pages/ItemIntro/Review.css
+++ b/src/pages/ItemIntro/Review.css
@@ -4,17 +4,21 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    
 }
 
 .cate-review{
     height:20%;
     width: 90%;
     display: flex;
+    margin-top: 1vh;
+    border: 1px solid orange;
 }
 .cate-review .total{
     height: 100%;
     width: 20%;
-    border: 1px solid orange;
+    background-color: rgb(213, 191, 213);
+    border-bottom: none;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -40,7 +44,7 @@
 }
 .review .review-container{
     width: 90%;
-    border: 1px solid rgba(0, 0, 0, 0.545);
+    border: 1px solid orange;
     height: auto;
     background-color: #ffffff;
 }
@@ -51,10 +55,22 @@
 }
 
 .review-container li{
-    height: 12vh;
+    height: auto;
     list-style: none;
     border: 1px solid rgb(102, 104, 164);
     width: 90%;
     margin-bottom: 1vh;
+    margin-top: .5vh;
    
+}
+.rates{
+    display: flex;
+}
+.rates .left{
+    width: 55%;
+    padding: 1rem;
+}
+.rates .right{
+    width: 45%;
+    padding: 1rem;
 }
