--- a/src/pages/ItemIntro/ItemIntro.css
+++ b/src/pages/ItemIntro/ItemIntro.css
@@ -31,12 +31,13 @@
     margin-bottom: 1vh;
     background-size: cover;
     background-repeat: no-repeat;
+    cursor: pointer;
 
 }
 .selection .imageShow{
     width: 25%;
     height: 50.5vh;
-    background-image: url("https://mymodernmet.com/wp/wp-content/uploads/2022/05/gorams-people-drawing-tutorials-6.jpg");
+    /* background-image: url("https://mymodernmet.com/wp/wp-content/uploads/2022/05/gorams-people-drawing-tutorials-6.jpg"); */
     background-size: contain;
     background-repeat: no-repeat;
     margin-left: 6.5vw;
@@ -65,6 +66,7 @@
     display: flex;
     padding-left: 1.2vw;
     font-weight: 600;
+    margin-left: 5vw;
 }
 .sel-pick{
     margin-bottom: 2vh;
