--- a/src/pages/ItemIntro/ItemIntro.css
+++ b/src/pages/ItemIntro/ItemIntro.css
@@ -23,7 +23,7 @@
 .imagesub{
     height: auto;
     width: 15vw;
-    border: 1px solid cornflowerblue;
+    border: 1px solid rgb(49, 52, 56);
 }
 .imagesub .imgsub{
     width: 100%;
