--- a/src/layout/Header/style/index.css
+++ b/src/layout/Header/style/index.css
@@ -165,3 +165,18 @@
         margin-bottom: 0;
     }
 } 
+.chatBox .ant-modal-content{
+   height: 70vh;
+   margin-top: 15vh;
+   width: 25vw;
+   margin-left: 40vw;
+   display: flex;
+   flex-direction: column;
+}
+.chatForm{
+    width: 100%;
+    display: flex;
+    position: absolute;
+    bottom: 1%;
+}
+
