--- a/src/pages/ItemIntro/ItemIntro.css
+++ b/src/pages/ItemIntro/ItemIntro.css
@@ -20,6 +20,11 @@
     margin-bottom: 2vh;
     padding-left: 5vw;
 }
+.selecBox .selection h1{
+    margin-bottom: 5vh;
+    font-size: 2rem;
+    font-family: Arial, Helvetica, sans-serif;
+}
 .imagesub{
     height: auto;
     width: 15vw;
