--- a/src/pages/Home/homes/Button.css
+++ b/src/pages/Home/homes/Button.css
@@ -39,7 +39,7 @@
     font-size: 3rem;
     width: 25vw;
     height: 17vh;
-    border: 5px solid white;
+    border: 1px solid white;
 }
 
 .btn--medium:hover,
@@ -53,7 +53,7 @@
     background-color: #ffffff00;
     width: 95%;
     height: 95%;
-    border: #fff solid 5px;
+    border: 1px solid #ffffff;
     border-radius: 5px;
     position: absolute;
     left:0.5vw;
