--- a/src/pages/Home/homes/Footer.css
+++ b/src/pages/Home/homes/Footer.css
@@ -2,7 +2,6 @@
     background-color: #242424;
     padding: 4rem 0 2rem 0;
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
@@ -14,8 +13,8 @@
     align-items: center;
     text-align: center;
 
-    margin-bottom: 24px;
-    padding: 24px;
+    margin-bottom: 10vh;
+    padding: 1.5rem;
     color: #fff;
 }
 
@@ -25,13 +24,13 @@
 }
 
 .footer-subscription-heading {
-    margin-bottom: 24px;
-    font-size: 24px;
+    margin-bottom: 1.5rem;
+    font-size: 1.4rem;
 }
 
 .footer-subscription-text {
-    margin-bottom: 24px;
-    font-size: 20px;
+    margin-bottom: 1rem;
+    font-size: 1.3rem;
 }
 
 .footer-input {
@@ -158,6 +157,3 @@
         flex-direction: column;
     }
 }
-
-@media screen and (max-width: 768px) {}
-
