--- a/src/pages/Home/homes/HeroSection.css
+++ b/src/pages/Home/homes/HeroSection.css
@@ -41,21 +41,25 @@
 .requires{
     text-align: center;
     background-color:#ffffff00 ;
-    border: 0.3rem solid white;
+    border: 1px solid white;
     border-radius: 5px;
     color: white;
-    font-size: 30px;
-    font-style: italic;
+    font-size: 1rem;
     padding: 5px 10px;
     width: 20vw;
-    height: 20vh;
+    height: 17vh;
     margin-left:0.5vw;
     margin-right:0.5vw;
 
 }
 
 .eventType option{
-    background-color:#6495ed60;
+    background-color:#ffffff;
+    color: rgb(143, 143, 143);
+}
+.eventType option:hover{
+    background-color: black;
+    color: white;
 }
 
 
