--- a/src/pages/Home/homes/HeroSection.css
+++ b/src/pages/Home/homes/HeroSection.css
@@ -56,6 +56,7 @@
 .eventType option{
     background-color:#ffffff;
     color: rgb(143, 143, 143);
+    -webkit-appearance: none;
 }
 .eventType option:hover{
     background-color: black;
