--- a/src/pages/Event/Event.css
+++ b/src/pages/Event/Event.css
@@ -28,10 +28,10 @@
     padding: 1rem;
 }
 .eve-ele{
-    width: 24%;
+    width: 54%;
     height: 100%;
     padding: 1rem;
-    background-color: bisque;
+    background-color: rgb(255, 255, 255);
     border-radius: 1rem;
     margin-right: 1rem;
 }
