--- a/src/pages/Profile/History.css
+++ b/src/pages/Profile/History.css
@@ -8,38 +8,11 @@
     margin-bottom: 3vh;
     padding-top: 2vh;
 }
-.slideshow{
-    display: flex;
-    height: 30vh;
-    justify-content: center;
-}
-.slideshow .prev{
-    background-image: url("https://alacritas.cis.utas.edu.au/~mingked/kit301/JPGs/left-arrow.png");
-    background-size:80%;
-    background-repeat: no-repeat;
-    margin-top: 8vh;
-    margin-right: 5vw;
-    height: 100%;
-    width: 7vw;
-    cursor: pointer;
+.slice-show{
+    width: 70vw;
+    margin-left: 15vw;
 }
 
-.slideshow .next{
-    background-image: url("https://alacritas.cis.utas.edu.au/~mingked/kit301/JPGs/right-arrow.png");
-    background-size: 80%;
-    background-repeat: no-repeat;
-    margin-top: 8vh;
-    margin-left: 5vw;
-    height: 100%;
-    width: 7vw;
-    cursor: pointer;
-}
-.slide{
-    background-image: url("https://betasmania.com.au/wp-content/uploads/2020/07/mr-i-with-mr-ii_44478028070_o-scaled-1536x810.jpg");
-    background-size: cover;
-    width: 60%;
-    height: 30vh;
-}
 .Details{
     margin-top: 3vh;
     height: 40vh;
