--- a/src/pages/Profile/History.css
+++ b/src/pages/Profile/History.css
@@ -35,6 +35,7 @@
     background-color: brown;
     color: aliceblue;
     font-size: 1rem;
+    border:none;
 }
 .detail h2{
     font-size: 1.4rem;
