--- a/src/layout/Header/style/index.css
+++ b/src/layout/Header/style/index.css
@@ -69,7 +69,10 @@
 .trolley .tro-item{
     color: #ffffff;
 }
-
+.tro-name{
+    position:absolute;
+    right: 10vw;
+}
 .nav-toggle:checked ~ .trolley{
     /* ~ first sibling, doesn't have to be immediatelt after */
     display: block;
@@ -140,7 +143,7 @@
         grid-column: 1 / 3;
     }
     .trolley{
-        grid-column: 3 / 4;
+        grid-column: 2 / 3;
         all:unset;
         display: flex;
         justify-content: flex-end;
