--- a/src/pages/Event/Event.css
+++ b/src/pages/Event/Event.css
@@ -19,6 +19,12 @@
 }
 .eve-col li{
     list-style: none;
+    float:left;
+    width:33.333%; /*three ele each row*/
+    padding: .75rem;
+    margin-bottom: 2rem;
+    border: 1px solid #efefef;
+    text-align: center;
 }
 .eve-row{
     width: 100%;
@@ -28,10 +34,111 @@
     padding: 1rem;
 }
 .eve-ele{
-    width: 24%;
+    width: 100%;
     height: 100%;
     padding: 1rem;
     background-color: rgb(255, 255, 255);
     border-radius: 1rem;
     margin-right: 1rem;
+}
+
+
+.find{
+    /*background-color: #80808030;*/
+    background-image: url("https://alacritas.cis.utas.edu.au/~mingked/kit301/JPGs/search_back.jpg");
+    background-size: cover;
+    display: flex;
+    padding: 30px;
+    justify-content:center;
+    opacity: 0.6;
+}
+.find .logo{
+    width:260px;
+    height: 100px;
+    background-image: url("https://alacritas.cis.utas.edu.au/~mingked/kit301/PNGs/logo.png");
+    background-size: 90%;
+    background-repeat: no-repeat;
+    margin-left: -120px;
+    cursor: pointer;
+}
+.formSearch{
+    display: flex;
+    width: 700px;
+    margin-left: 90px;
+    margin-top: 10px;
+}
+
+.formSearch input{
+    margin-top: 10px;
+    height:55px;
+    width: 560px;
+    border-radius: 5px;
+    text-align: center;
+    background-color: #ffffff60;
+    font-size: medium;
+    color: white;
+}
+
+.iconSearch{
+    background-image: url("https://alacritas.cis.utas.edu.au/~mingked/kit301/JPGs/search.png");
+    width: 90px;height: 90px;
+    background-repeat: no-repeat;
+    background-size: 85%;
+    margin: 5px 30px;
+    cursor: pointer;
+}
+.result .filter{
+    background-color: #ffffff40;  
+    
+}
+.filter .selection{
+    width:80%;
+    margin-left: 18%;
+    display: flex;
+    height: 95px;
+}
+.selection .left{
+    display: flex;
+    width: 20%;
+    padding: 25px;
+    font-size: large;
+}
+.selection .all{
+    margin-left: 25px;
+    padding-left: 5px;
+    padding-right: 5px;
+    background-color:darkseagreen;
+    border-radius: 10px;
+    height: 25px;
+    color: aliceblue;
+    width: 70px;
+}
+.filter .selection .right{
+    width: 80%;
+    font-size: large;
+    padding-top: 20px;   
+}
+
+.filter .selection ul{
+    list-style-type: none;
+    display:inline-block;
+    display: flex; margin-left: 20px;
+    flex-wrap: wrap;
+    width: 70%
+}
+.filter .selection li{
+    padding-left: 5px;
+    border-radius: 10px;
+    margin-left: 25px;
+    margin-top: 5px;
+    cursor: pointer;
+}
+.hrSearch{
+    width: 920px;
+    margin-left: 305px;
+    margin-top: 5px;
+    opacity: 40%;
+    border:none;
+    border-top:4px dashed #9C528B;
+    
 }
