--- a/src/pages/Event/Event.css
+++ b/src/pages/Event/Event.css
@@ -97,14 +97,22 @@
     margin-left: 18%;
     display: flex;
     height: 95px;
+    align-items: center;
 }
-.selection .left{
-    display: flex;
-    width: 20%;
-    padding: 25px;
+.selection p{
+    margin-top: 1vh;
+    margin-right: 2vw;
+    font-size: 1rem;
+}
+.filter .selection .right{
+    width: 80%;
     font-size: large;
 }
-.selection .all{
+
+.ant-radio{ /*radio circle */
+    display: none;
+  } 
+  .ant-radio-wrapper-checked{
     margin-left: 25px;
     padding-left: 5px;
     padding-right: 5px;
@@ -112,34 +120,13 @@
     border-radius: 10px;
     height: 25px;
     color: aliceblue;
-    width: 70px;
-}
-.filter .selection .right{
-    width: 80%;
-    font-size: large;
-    padding-top: 20px;   
-}
-
-.filter .selection ul{
-    list-style-type: none;
-    display:inline-block;
-    display: flex; margin-left: 20px;
-    flex-wrap: wrap;
-    width: 70%
-}
-.filter .selection li{
-    padding-left: 5px;
-    border-radius: 10px;
-    margin-left: 25px;
-    margin-top: 5px;
-    cursor: pointer;
-}
+    width: 7vw;
+  }
 .hrSearch{
     width: 920px;
     margin-left: 305px;
     margin-top: 5px;
     opacity: 40%;
     border:none;
-    border-top:4px dashed #9C528B;
     
 }
