--- a/src/layout/Header/style/index.css
+++ b/src/layout/Header/style/index.css
@@ -50,13 +50,45 @@
 
 .shop-list ul{
     list-style: none;
-   
+    overflow:scroll;
+    height: 45vh;
+    
 }
 .shop-list li{
     margin-bottom: 1rem;
-    background-color: rgb(135, 177, 169);
+    display: flex;
+    width: 27vw;
+    height: 15vh;
+    border: 2px solid #efefef;
+    border-radius: 5px;
+}
+.shop-list li .avatar{
+    width: 130px;
+    background-image: url('https://images.squarespace-cdn.com/content/v1/585a6e76b3db2b19a94d4553/706b772c-47e0-46ce-b302-9cd9032f9087/IMG-2353.jpg');
+    background-size: cover;
+    height: 100%;
+}
+.shop-list li .left{
+    padding: 10px;
+    width: 12.5vw;
+    height: 100%;
+}
+.shop-list li .right button{
+    width: 7vw;
+    height: 5vh;
+    margin-top: 4vh;
+    margin-left: -30px;
 }
 
+.shop-list li .left h3{
+    box-sizing: border-box;
+    scroll-behavior: auto;
+    height: 5vh;
+    font-size: 1.5rem;
+    font-weight:400;
+    overflow:scroll;
+    
+}
 .trolley Link{  
     /* remove a tag feature */
     text-decoration: none;
