--- a/src/global.css
+++ b/src/global.css
@@ -13,13 +13,13 @@
 }
 .m-content{
     flex:1;
-    height: 100%;
+    height: 100vh;
     overflow: auto;
    
 }
 
 .ant-menu{
-    height: 100%;
+    height: 100vh;
 }
 
 .m-operate{
