--- a/src/pages/Result/Result.css
+++ b/src/pages/Result/Result.css
@@ -1,19 +1,21 @@
 .itemList{
    background-color:#9C528B30;
-   width: 1150px;
+   width: 80%;
    height: 900px;
-   margin-left: 13%;
-   padding-left: 20px;
-   padding-top: 10px;
-   margin-top: 25px;
+   display: flex;
+   margin-top: 4vh;
+   margin-left: 10vw;
+   border: 10px solid #30303030;
+   justify-content: center;
 }
 .itemList .item{
     background-color:#9C528B60;
-    width: 1150px;
-    height: 140px;
-    margin-top: 15px;
+    width: 90%;
+    height: 22.5vh;
     box-shadow: 5px 10px #88888840;
     display: flex;
+    margin-top: 1vh;
+
 }
 
 .item-left{
@@ -67,4 +69,53 @@
     width: 25px;
     border-radius: 15px;
     background-size: cover;
+}
+.event-intro{
+    width: 100vw;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.event-intro .intro-img{
+    background-image: url("https://images.unsplash.com/photo-1517457373958-b7bdd4587205?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2069&q=80");
+    width: 100%;
+    height: 45vh;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+.event-intro .divider{
+    width: 70%;
+    border-top: 1px solid #00000040;
+}
+.intro-list{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 5vh;
+}
+.intro-list .list-locate{
+    width: 24%;
+    height: 25vh;
+    padding-top: 10px;
+    margin-top: 3vh;
+    overflow: scroll;
+    margin-right: 5vw;
+}
+
+.list-locate h3{
+    width: 10vw;
+    color:#959595;
+}
+.list-locate h2{
+    font-size: 1.5rem;
+}
+.intro-desc{
+    font-size: 1.7rem;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: 200;
+    width: 54%;
+    text-align: center;
+    margin-top: 5vh;
+    margin-bottom: 5vh;
 }
